# llvm-practice

./: CMakeLists.txt  README.md  rtlib.cc
examples/: CMakeLists.txt  a.out  rtlib.cc  tmp.cc
skeleton/: Skeleton.cpp
